update dependencies
