# src/main/kotlin/com/wutsi/checkout/manager/dto/SearchOrderResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.checkout.manager.dto
+
+import kotlin.collections.List
+
+public data class SearchOrderResponse(
+    public val orders: List<OrderSummary> = emptyList()
+)
